<resources>
    <string name="app_name">DefeatCovid</string>
    <string name="Profie">DefeatCovid</string>
    <string name="topText">
              ***বাইরে গেলে মাস্ক পরিধান করুন *** নিয়মিত সাবান দিয়ে ২০ সেকেন্ড সময় নিয়ে হাত ধৌত করুন ***
    </string>
    <string name="heading1">আপনি এখন ঝুঁকি মুক্ত আছেন</string>
    <string name="description1">আপনার মধ্যে করোনা সংক্রমণের কোন লক্ষণ বা আশংকা দেখা যায় নি। করোনা সংক্রমিত হওয়া থেকে রক্ষা পেতে স্বাস্থ্য বিধি মেনে চলুন, অন্যদের সতর্ক করুন। </string>
    <string name="heading2">আপনি আংশিক ঝুঁকির মধ্যে আছেন </string>
    <string name="description2">

        আপনার মধ্যে করোনা সংক্রমণের সম্ভাবনার কিছু লক্ষণ দেখা যায়। ঘরে থাকুন এবং স্বাস্থ্য বিধি মেনে চলুন। সন্দেহ জনক লক্ষণ দেখা দিলে সেলফ কোয়ারেন্টাইনে থাকুন, এবং করোনা পরীক্ষা করান।
    </string>
    <string name="heading3">আপনি ঝুঁকি পূর্ণ অবস্থায় আছেন </string>
    <string name="description3">
        আপনার মধ্যে করোনা সংক্রমণের সম্ভাবনা প্রবল। নিজেকে সেলফ কোয়ারেন্টাইনে রাখুন, স্বাস্থ্য বিধি মেনে চলুন এবং ডাক্তারের পরামর্শ গ্রহণ করুন।
    </string>
    <string name="heading4">আপনার করোনা ভাইরাসে আক্রান্ত হবার সম্ভাবনা রয়েছে  </string>
    <string name="description4">
        আপনার মাঝে করোনা আক্রান্ত হবার লক্ষণ দেখা যায়। নিজেকে আইসোলেশন অবস্থায় রাখুন, দ্রুত করোনা টেস্ট করে ডাক্তারের পরামর্শ অনুযায়ী যথাযথ ব্যাবস্থা গ্রহণ করুন ।
    </string>
    <string name="heading5">আপনি করোনা ভাইরাসে আক্রান্ত হবার উচ্চ ঝুঁকিতে আছেন।  </string>
    <string name="description5">
        দ্রুত নিজেকে আইসোলেশনে রাখুন। পুষ্টিকর খাবার গ্রহণ করুন। করোনা পরীক্ষা করে ডাক্তারের পরামর্শ গ্রহণ করুন। আপনার সুস্বাস্থ্য কামনা করছি।
    </string>
    <string name="heading"> মূল লক্ষনঃ</string>
    <string name="symptoms">

        <ol>
            <li>সর্দি, কাশি, জ্বর (প্রথম দিকে ১০০ পরে ১০৫-১০৬ ডিগ্রি সেলসিয়াস পর্যন্তও হতে পারে)\n\n</li>
        <li>শ্বাসকষ্ট ( প্রথম দিকে নাও থাকতে পারে)\n\n</li>
        <li>গলা ব্যাথা\n\n</li>
        <li>গায়ে ব্যাথা\n\n</li>
        <li>কোনো কোনো ক্ষেত্রে জয়েন্ট পেইন\n\n</li>
        <li>এটি ফুসফুসে আক্রমণ করে\n\n</li>
        <li>সাধারণত শুষ্ক কাশি ও জ্বরের মাধ্যমেই শুরু হয় উপসর্গ, পরে শ্বাস প্রশ্বাসে সমস্যা দেখা দেয়\n\n</li>
        <li>সাধারণত রোগের উপসর্গগুলো প্রকাশ পেতে গড়ে পাঁচ দিন সময় নেয়</li>

    </ol>
    </string>
    <string name="advice">সংক্রমণ রোধেঃ </string>
    <string name="_1"> যথাসম্ভব বাসায় অবস্থান করুন।  </string>
    <string name="_2">যখন তখন নাক, মুখে হাত দেওয়া পরিহার করুন। একান্ত দিতে হলে সাবান দিয়ে হাত ধুয়ে দিবেন। </string>
    <string name="_3">বাইরে গেলে মাস্ক ব্যবহার করুন। </string>
    <string name="_4">বাইরে থেকে এসেই সাবান/সানিটাইজার/ডিটারজেন্ট দিয়ে ২০ সেকেন্ড সময় নিয়ে হাত পরিষ্কার করুন। পানি দিয়ে নাক, মুখ পরিষ্কার করুন।</string>
    <string name="_5">ফল ভালো করে ধুয়ে খাবেন। </string>
    <string name="_6"> ভিটামিন সি ( সাইট্রাস ফ্রুটস), ভিটামিন -ই, বিটা ক্যারোটিন ( ভিটামিন-এ) জাতীয় খাবার গ্রহন করুন। </string>
    <string name="_7"> ভীড়, সমাবেশ, সামাজিক অনুষ্ঠান, রাজনৈতিক সভা, গনপরিবহন এড়িয়ে চলুন।  </string>
    <string name="_8"> আত্মীয় স্বজনকে নিজ নিজ জায়গায় অবস্থান করতে বলুন।  </string>
    <string name="_9">  কমন ব্যবহার্য জিনিসপত্র যেমন দরজার হাতল, ড্রয়ার, ফার্নিচার, ইত্যাদি এন্টিসেপ্টিক স্রে দিয়ে পরিষ্কার করুন।  </string>
    <string name="_10">  সাধারণ সর্দি, কাশি হলেই ডাক্তার চেম্বারে না গিয়ে এন্টিহিস্টামিন ( লোরাটাডিন/ ফেক্সোফেনাডিন) খেতে পারেন। ডায়াগনস্টিক সেন্টার ইত্যাদি আপাতত সাময়িকভাবে এড়িয়ে চলুন।</string>
    <string-array name="webportals">
        <item>নিউজ পোর্টাল</item>
        <item>প্রথম আলো</item>
        <item>ইত্তেফাক</item>
        <item>আমাদের সময় </item>
        <item>সমকাল </item>
        <item>আমার দেশ</item>
        <item>নয়াদিগন্ত</item>
        <item>বাংলাদেশ প্রতিদিন</item>
        <item>ইনকিলাব</item>
        <item>জনকণ্ঠ </item>
        <item>সকালের খবর</item>

    </string-array>
    <string-array name="websites">
        <item>গুরুত্বপূর্ণ ওয়েবসাইট সমূহ </item>
        <item>IEDCR</item>
        <item>Corona BD</item>
        <item>WHO</item>
        <item>Health Ministry</item>
        <item>Telemedicine</item>
        <item>Unicef</item>
    </string-array>
    <string-array name="important_contacts">
        <item>গুরুত্বপূর্ণ নম্বর সমূহ </item>
        <item>সর্দি-কাশি ও জ্বরে চিকিৎসকের পরামর্শ\n

             জাতীয় রোগতত্ত্ব, রোগনিয়ন্ত্রণ ও গবেষণা ইনস্টিটিউটের (আইইডিসিআর)\n
            নম্বর: ১০৬৫৫ ও ০১৯৪৪৩৩৩২২২\n
            ই–মেইল: iedcrcovid19@gmail.com\n
        </item>

        <item>করোনাবিষয়ক তথ্য পেতে এবং সম্ভাব্য আক্রান্ত ব্যক্তি সম্পর্কে তথ্য দিতে ওয়েবসাইট: corona.gov.bd\n</item>
        <item>স্বাস্থ্য বাতায়নের হটলাইন নম্বর ১৬২৬৩\n</item>
        <item>স্বাস্থ্য অধিদপ্তরের  হটলাইন নম্বর ৩৩৩\n</item>
        <item>সশস্ত্র বাহিনীর সঙ্গে যোগাযোগের নম্বর: ০১৭৬৯০৪৫৭৩৯\n</item>
        <item>মিথ্যা বা গুজব প্রচারের বিষয়টি নজরে এলে\n

          ৯৯৯  অথবা ৯৫১২২৬৪, ৯৫১৪৯৮৮\n</item>
        <item>দাফন কার্যক্রমে সহায়তা পেতে\n

             স্বাস্থ্য মন্ত্রণালয়ের দায়িত্বপ্রাপ্ত দুই যুগ্ম সচিবের\n

            মুঠোফোন নম্বর: ০১৭১২০৮০৯৮৩ ও ০১৫৫২২০৪২০৮\n</item>

        <item>নারী ও শিশু নির্যাতন প্রতিরোধে: টোল ফ্রি নম্বর: ১০৯\n</item>
        <item>মনঃসামাজিক সহায়তা সেল\n
        রোববার থেকে বৃহস্পতিবার পর্যন্ত সকাল ৯টা থেকে বিকেল ৫টা:\n
           ফোন: ০১৮১১৪৫৮৫৪১ ও ০১৮১১৪৫৮৫৪২\n
        </item>

        <item>
            জরুরি ত্রাণ পেতে\
           ঢাকা জেলা প্রশাসনের হটলাইন: ০২৪৭১১০৮৯১, ০১৯৮৭৮৫২০০৮\n
            ঢাকা দক্ষিণ সিটি করপোরেশন: ০১৭০৯৯০০৭০৩, ০১৭০৯৯০০৭০৪\n
        </item>

    </string-array>
    <string name="alert">*সার্ভার জনিত সমস্যার কারণে আপনার বাছাইকৃত ওয়েবসাইটটি লোড হতে কিছু অতিরিক্ত সময় নিতে পারে</string>
    <string name="myth1">শীতল আবহাওয়া এবং তুষারপাত করোনাভাইরাস ঠেকাতে পারে:</string>
    <string name="myth2">গরম পানি দিয়ে গোসল করলে করোনাভাইরাস প্রতিরোধ করা সম্ভব নয়:</string>
    <string name="myth3">চীন বা অন্য যেসব দেশে ভাইরাস ছড়িয়েছে, সেসব দেশে উৎপাদিত পণ্য ব্যবহার করলে করোনাভাইরাস ছড়াবে না:</string>
    <string name="myth4">মশার কামড়ে নতুন করোনাভাইরাস ছড়ায় না:</string>
    <string name="myth5">হ্যান্ড ড্রায়ার কি নতুন করোনাভাইরাস প্রতিরোধে কার্যকর?</string>
    <string name="myth6">আলট্রাভায়োলেট বা অতিবেগুনী রশ্মি কি করোনাভাইরাস প্রতিরোধে সক্ষম?</string>
    <string name="myth7">করোনাভাইরাস শনাক্তে থার্মাল স্ক্যানার কতটা কার্যকর?</string>
    <string name="myth8">শরীরে অ্যালকোহল বা ক্লোরিন স্প্রে করে কি করোনাভাইরাস প্রতিরোধ সম্ভব?</string>
    <string name="myth9">বাড়িতে থাকা পোষা প্রাণী থেকে কি কোভিড-১৯ ছড়াতে পারে?</string>
    <string name="myth10">নিউমোনিয়ার ভ্যাকসিনগুলো কি করোনাভাইরাস থেকে রক্ষা করতে সক্ষম?</string>
    <string name="myth11">স্যালাইন দিয়ে নিয়মিত নাক ধুলে কি করোনাভাইরাস সংক্রমণ রোধ পাবে?</string>
    <string name="myth12">করোনাভাইরাসে কি শুধু বয়স্ক ব্যক্তিরাই আক্রান্ত হতে পারেন?</string>
    <string name="myth13">করোনাভাইরাস প্রতিরোধ ও চিকিৎসায় অ্যান্টিবায়োটিক কি কার্যকর?</string>
    <string name="myth14">করোনাভাইরাস প্রতিরোধ বা চিকিৎসায় নির্দিষ্ট কোনো ওষুধ রয়েছে কি?</string>
    <string name="heading_myth">করোনা ভাইরাস নিয়ে যত ভুল ধারণা</string>
    <string name="solution1">শীতল আবহাওয়া করোনাভাইরাস বা অন্য কোনো রোগকে ঠেকাতে পারে এটি বিশ্বাস করার কোনো কারণ নেই। বাহ্যিক তাপমাত্রা বা আবহাওয়া নির্বিশেষে মানবদেহের স্বাভাবিক তাপমাত্রা প্রায় ৩৫.৫ ডিগ্রি সেলসিয়াস থেকে ৩৭ ডিগ্রি সেলসিয়াস পর্যন্ত হয়ে থাকে। নতুন করোনাভাইরাস থেকে নিজেকে রক্ষা করার সবচেয়ে কার্যকর উপায় হলো ঘন ঘন হ্যান্ড স্যানিটাইজার ব্যবহার করা বা পানি ও সাবান দিয়ে ভালো করে হাত ধুয়ে ফেলা।</string>
    <string name="solution2">গরম পানি দিয়ে গোসল করলে আপনি কোভিড-১৯ রোগে আক্রান্ত হবেন না, এটিও একটি ভুল ধারণা। বরং বেশি গরম পানি দিয়ে গোসল করলে তা শরীরের জন্য ক্ষতিকরও হতে পারে। কোভিড-১৯ থেকে নিজেকে রক্ষার সর্বোত্তম পন্থা হলো ঘন ঘন হাত ধুয়ে ফেলা। এর ফলে আপনার হাতে যদি ভাইরাস থেকে থাকে তাহলে তা নির্মূল হবে এবং হাত দিয়ে চোখ, মুখ বা নাক স্পর্শ করার পর ভাইরাস সংক্রমিত হওয়ার সম্ভাবনা কমে আসবে।</string>
    <string name="solution3">যদিও নতুন করোনাভাইরাস কয়েক ঘন্টা বা বেশ কয়েকদিন পর্যন্ত পৃষ্ঠের ওপর থাকতে পারে (পৃষ্ঠের ধরণের ওপর নির্ভর করে), তবে কোনো বস্তু সরানো, ভ্রমণ, বিভিন্ন অবস্থার সংস্পর্শে আসার পর এবং ভিন্ন ভিন্ন আবহাওয়ার পরও ভাইরাসটি পৃষ্ঠের ওপর থেকে যাবে, এমন সম্ভাবনা নেই বললেই চলে। তারপরও আপনার যদি মনে হয় কোনো বস্তুতে ভাইরাস রয়েছে, সেক্ষেত্রে এটি পরিস্কার করার জন্য একটি জীবাণুনাশক ব্যবহার করুন এবং পরে সাবান দিয়ে ভালো করে হাত ধুয়ে ফেলুন।</string>
    <string name="solution4">মশা বা মশার কামড়ে করোনাভাইরাস সংক্রমিত হতে পারে এমন কোনো তথ্য বা প্রমাণ এখন পর্যন্ত পাওয়া যায়নি। নতুন করোনাভাইরাস হলো শ্বাসযন্ত্রের ভাইরাস যা প্রাথমিকভাবে আক্রান্ত ব্যক্তির হাঁচি, কাশি, সর্দি, লালা বা স্রাবের মাধ্যমে ছড়ায়। নিজেকে রক্ষা করতে, কিছুক্ষণ পর পর ভালো করে হাত ধুয়ে ফেলুন এবং হাঁচি, কাশি হচ্ছে এমন কারও সাথে ঘনিষ্ঠ যোগাযোগ এড়িয়ে চলুন।</string>
    <string name="solution5">না, নতুন এই ভাইরাস প্রতিরোধে হ্যান্ড ড্রায়ার কার্যকর নয়। এই ভাইরাস প্রতিরোধে অন্যতম কার্যকর উপায় হলো হাত পরিস্কার রাখা। সাবান দিয়ে ভালো করে হাত ধোয়ার পর তোয়ালে বা এয়ার ড্রায়ার ব্যবহার করে তা শুকিয়ে ফেলুন।</string>
    <string name="solution6">হাত বা ত্বকের কোনো স্থান জীবাণুমুক্ত করার ক্ষেত্রে ইউভি ল্যাম্প ব্যবহার করা ঠিক নয়, কারণ ইউভি রেডিয়েশনের ফলে ত্বকে জ্বালাপোড়া হতে পারে।</string>
    <string name="solution7">নতুন করোনাভাইরাসের কারণে যারা জ্বরে আক্রান্ত (শরীরে স্বাভাবিকের চেয়ে তাপমাত্রা বেশি থাকা) তাদের শনাক্ত করতে থার্মাল স্ক্যানার কার্যকরী। তবে জ্বরে আক্রান্ত নয় কিন্তু করোনা আক্রান্ত হয়েছে, এমন ব্যক্তিদের শনাক্তে এটি কার্যকর নয়। কারণ করোনাভাইরাস আক্রান্ত হয়ে অসুস্থ্য বা জ্বরে আক্রান্ত হওয়ার ক্ষেত্রে ২ থেকে ১০ দিন সময় লাগে।  </string>
    <string name="solution8">না, অ্যালকোহল বা ক্লোরিন স্প্রে করে শরীরে প্রবেশ করা করোনাভাইরাস প্রতিরোধে করা সম্ভব নয়। অ্যালকোহল বা ক্লোরিন কোনো বস্তু জীবাণুমুক্ত করার ক্ষেত্রে কার্যকর হতে পারে, তবে তা ব্যবহার করার ক্ষেত্রে সচেতন থাকা প্রয়োজন।</string>
    <string name="solution9">কুকুর বা বিড়ালের মতো সহচর/পোষা প্রাণী নতুন করোনাভাইরাসে আক্রান্ত হতে পারে, এখন পর্যন্ত এমন কোনো তথ্য-প্রমাণ পাওয়া যায়নি। তবে, পোষা প্রাণীর সংস্পর্ষে থাকার পর ভালো করে হাত ধুয়ে নেয়া উচিত। এটি ই.কোলি এবং সালমোনেলার মতো ব্যাকটেরিয়া যা প্রাণী থেকে মানুষের শরীরে প্রবেশ করতে পারে, তা থেকে রক্ষা করবে।  </string>
    <string name="solution10">না, নিউমোনিয়ার ক্ষেত্রে ব্যবহার করা ভ্যাকসিনগুলো নতুন করোনাভাইরাস থেকে আপনাকে রক্ষা করতে সক্ষম নয়। ভাইরাসটি এতটাই নতুন এবং আলাদা যে, এর নিজস্ব ভ্যাকসিন প্রয়োজন। গবেষকরা কোভিড-১৯ প্রতিরোধে ভ্যাকসিন তৈরির চেষ্টা করছেন এবং বিশ্ব স্বাস্থ্য সংস্থা (ডব্লিউএইচও) গবেষকদের সহয়তা করছে।</string>
    <string name="solution11">না, স্যালাইন দিয়ে নিয়মিত নাক ধুলে করোনাভাইরাস সংক্রমণ রোধ করা যাবে এর কোনো প্রমাণ নেই। অল্প কিছু প্রমাণ রয়েছে যে, স্যালাইন দিয়ে নাক ধুলে তা মানুষের সাধারণ সর্দি কমাতে সহায়তা করতে পারে। তবে, শ্বাসকষ্টজনিত সংক্রমণ রোধে এটি কার্যকর নয়।</string>
    <string name="solution12">যেকোনো বয়সের মানুষ নতুন করোনাভাইরাসে (কোভিড-১৯) আক্রান্ত হতে পারেন। তবে বয়স্ক ব্যক্তি, বিশেষ করে যারা হাঁপানি, ডায়াবেটিস বা হৃদরোগের মতো রোগে আক্রান্ত, করোনাভাইরাস তাদের জন্য বেশি ঝুঁকিপূর্ণ বলে মনে করা হয়।</string>
    <string name="solution13">না, অ্যান্টিবায়োটিকগুলো শুধুমাত্র ব্যাকটেরিয়ার বিরুদ্ধে কার্যকর, ভাইরাসের বিরুদ্ধে নয়। তাই নতুন করোনাভাইরাসের ক্ষেত্রে অ্যান্টিবায়োটিক কার্যকর নয়। তবে, কোভিড-১৯ আক্রান্ত হয়ে হাসপাতালে ভর্তি হলে আপনাকে অ্যান্টিবায়োটিক গ্রহণ করতে হতে পারে, কারণ এই ভাইরাস থেকে ব্যাকটেরিয়াল কো-ইনফেকশন হওয়া সম্ভব।</string>
    <string name="solution14">এখন পর্যন্ত করোনাভাইরাস প্রতিরোধ বা চিকিৎসায় নির্দিষ্ট কোনো ওষুধ পাওয়া যায়নি। তবে নির্দিষ্ট কিছু চিকিৎসা খতিয়ে দেখা হচ্ছে এবং পরবর্তিতে ক্লিনিকাল ট্রায়ালের মাধ্যমে তা পরীক্ষা করে দেখা হবে।</string>
    <string name="copyright">সূত্র: বিশ্ব স্বাস্থ্য সংস্থা (ডব্লিউএইচও)।</string>
</resources>