<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HealthAwareness"
    android:background="#fff"
    >


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_weight="4"
          android:weightSum="6"
          >

         <TextView
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="22sp"
             android:text="@string/heading"
             android:gravity="center_horizontal"
             android:layout_margin="10dp"
             android:textColor="#5CABEA"
             android:background="#FCFFFF"
             android:textStyle="bold"
             />


         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="5"
             >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/symptoms"
                android:layout_margin="10dp"
                android:background="#fff"
                />

         </ScrollView>

      </LinearLayout>


      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_weight="1"
          android:weightSum="8"
          >

         <TextView
             android:layout_weight="2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="22sp"
             android:text="@string/advice"
             android:gravity="center_horizontal"
             android:layout_marginTop="10dp"
             android:layout_margin="10dp"
             android:textColor="#5CABEA"
             android:background="#fff"
             android:textStyle="bold"
             />

         <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >


            <LinearLayout
                android:layout_weight="5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >


               <TextView
                   android:layout_width="200dp"
                   android:layout_height="match_parent"
                   android:textSize="20sp"
                   android:text="@string/_1"
                   android:layout_margin="10dp"
                   android:textColor="#fff"
                   android:background="#8b8989"
                   android:gravity="center"
                   />
               <TextView
                   android:layout_width="200dp"
                   android:layout_height="match_parent"
                   android:textSize="20sp"
                   android:text="@string/_2"
                   android:layout_margin="10dp"
                   android:gravity="center"
                   />
               <TextView
                   android:layout_width="200dp"
                   android:layout_height="match_parent"
                   android:textSize="20sp"
                   android:text="@string/_3"
                   android:layout_margin="10dp"
                   android:textColor="#fff"
                   android:background="#8b8989"
                   android:gravity="center"
                   />
               <TextView
                   android:layout_width="200dp"
                   android:layout_height="match_parent"
                   android:textSize="20sp"
                   android:text="@string/_4"
                   android:layout_margin="10dp"
                   android:gravity="center"
                   />
               <TextView
                   android:layout_width="200dp"
                   android:layout_height="match_parent"
                   android:textSize="20sp"
                   android:text="@string/_5"
                   android:layout_margin="10dp"
                   android:textColor="#fff"
                   android:background="#8b8989"
                   android:gravity="center"
                   />
               <TextView
                   android:layout_width="200dp"
                   android:layout_height="match_parent"
                   android:textSize="20sp"
                   android:text="@string/_6"
                   android:layout_margin="10dp"
                   android:gravity="center"
                   />
               <TextView
                   android:layout_width="200dp"
                   android:layout_height="match_parent"
                   android:textSize="20sp"
                   android:text="@string/_7"
                   android:layout_margin="10dp"
                   android:textColor="#fff"
                   android:background="#8b8989"
                   android:gravity="center"
                   />
               <TextView
                   android:layout_width="200dp"
                   android:layout_height="match_parent"
                   android:textSize="20sp"
                   android:text="@string/_8"
                   android:layout_margin="10dp"
                   android:gravity="center"
                   />
               <TextView
                   android:layout_width="200dp"
                   android:layout_height="match_parent"
                   android:textSize="20sp"
                   android:text="@string/_9"
                   android:layout_margin="10dp"
                   android:textColor="#fff"
                   android:background="#8b8989"
                   android:gravity="center"
                   />

               <TextView
                   android:layout_width="200dp"
                   android:layout_height="match_parent"
                   android:textSize="20sp"
                   android:text="@string/_10"
                   android:layout_margin="10dp"
                   android:gravity="center"
                   />

            </LinearLayout>

         </HorizontalScrollView>

         <TextView
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_margin="10dp"
             android:text="scroll right or left"
             />

      </LinearLayout>

   </LinearLayout>

</ScrollView>